# warp-dynamic

./: warp-dynamic.cabal
Network/Wai/Application/: Dynamic.hs
app/: Main.hs
config/: warpd.hs
